[package]
name = "onering-finance"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onering_finance"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
stable-swap-anchor = "1.6.7"
quarry-mine = { version = "1.11.9", features = ["cpi"] }
port-anchor-adaptor = "0.3.0"
